--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ safe: true
 source: '.' 
 incremental: false
 highlighter: rouge
-theme: minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
 gist:
   noscript: false
 kramdown:
