--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pytorch-lightning
+pytorch-lightning==1.7.7
 python-dotenv
-hydra-core
-hydra-colorlog
-wandb
+hydra-core==1.2.0
+hydra-colorlog==1.2.0
+wandb==0.13.4
 auraloss
 datasets
 pyloudnorm
-einops
+einops==0.5.0
 omegaconf
 rich
 plotly
